# temporal-v2

./: pyproject.toml  requirements.txt
temporal/: effective.py  errors.py  history.py  lock.py  perspective.py
temporal/sqla/: history_entry_mixin.py  perspective_entry_mixin.py  snapshot_mixin.py
temporal/tests/: conftest.py  models.py  test_persistence.py
