[tool.poetry]
name = "temporal-v2"
version = "0.1.0"
description = ""
authors = ["Nicolas Zermati <nicoolas25@gmail.com>"]
readme = "README.md"
# packages = [{include = "temporal"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.9"
pytest = "^7.3.1"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
